--- a/index.html
+++ b/index.html
@@ -22,15 +22,57 @@ Click
 <p v-pre>{{message}}</p>
 </div> -->
 
-
+<!-- 
 <div id="app3">
     <p >{{message}}</p>
     <p v-html ="message"></p>
 </div>
-    
+     -->
+<!-- <div id="app4">
+    <h2>v-cloak</h2>
+    <p v-cloak>{{message}}</p>
+</div>
+         -->
+<!-- <div id="app5">
+    <p v-text="message"></p>
+</div> -->
+         
+
+<!-- 
+<div id="app6">
+    <p>{{message}}</p>
+    <p>{{number+1}}</p>
+    <p>{{message.split('').reverse().join('')}}</p>
+
+    <p>{{ ok ? 'YES' : 'NO'}}</p>
+
+    <p>
+      <!-- {{if(ok){return message}}} -->
+      <!-- {{ok ? message :''}}
+    </p> -->
+
+<!-- </div> --> 
 
 
+<!-- 
+<div id="app7">
+    <h2>Mustache</h2>
+    <p>{{ price | numberFormat }}</p>
+    <h2>v-bind</h2>
+    <input type="text" v-bind:value="price | numberFormat">
+</div>
+ -->
 
+<!-- 
+<div class="" id="app8">
+   <p>{{jpyPrice}}</p> 
+</div> -->
+
+
+<div id="app9">
+    <a v-bind:href="url" target="_blank">Link1</a>
+    <a :href="url" target="_blank">Link2</a>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
